--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-PYTHONPATH=C:\InsideOfMax\Projetos&Estudos\Python\RegisterBookApi1\src
+#para testes
+# PYTHONPATH=C:\InsideOfMax\Projetos&Estudos\Python\RegisterBookApi1\src
