criptografia basica de login adicionada e swagger de todos os controllers

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 #para testes
-# PYTHONPATH=C:\InsideOfMax\Projetos&Estudos\Python\RegisterBookApi1\src
+PYTHONPATH=C:\InsideOfMax\Projetos&Estudos\Python\RegisterBookApi1\src
